--- a/config/locales/auth/auth.en.yml
+++ b/config/locales/auth/auth.en.yml
@@ -13,4 +13,7 @@ en:
   change_password: 'Change password'
   confirm_password: 'Confirm the new password'
   new_password: 'New password'
+  password: 'Password'
   change: 'Change'
+  already_have_account: 'Already have account'
+  password_confirmation: 'Password confirmation'
